--- a/Program_Scheduler/Base.lproj/Main.storyboard
+++ b/Program_Scheduler/Base.lproj/Main.storyboard
@@ -296,6 +296,9 @@
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="pSa-0q-IWY">
                                 <rect key="frame" x="117" y="175" width="150" height="72"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="startDateChanged:" destination="wnb-cu-bIt" eventType="valueChanged" id="fHT-SN-mKW"/>
+                                </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Gp-oh-2Z1">
                                 <rect key="frame" x="255" y="591" width="104" height="59"/>
@@ -323,6 +326,20 @@
                                     <action selector="weatherButtonPressed:" destination="wnb-cu-bIt" eventType="touchUpInside" id="dMf-aD-bCw"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jkd-3j-Qc5">
+                                <rect key="frame" x="134" y="543" width="62" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Condition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ky0-3s-1PN">
+                                <rect key="frame" x="255" y="543" width="105" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="HGO-pA-PKj"/>
@@ -330,8 +347,10 @@
                     <navigationItem key="navigationItem" id="twV-XC-iRx"/>
                     <connections>
                         <outlet property="DependsPickerView" destination="EBh-B9-4UO" id="nlN-gX-jQU"/>
+                        <outlet property="condLabel" destination="ky0-3s-1PN" id="XY4-se-Emn"/>
                         <outlet property="endDatePicker" destination="4uW-Km-IiC" id="BbC-8A-slu"/>
                         <outlet property="startDatePicker" destination="pSa-0q-IWY" id="WO4-GA-GHW"/>
+                        <outlet property="tempLabel" destination="jkd-3j-Qc5" id="yqe-Ax-woS"/>
                         <outlet property="titleTextField" destination="fTy-El-Cca" id="wlx-e4-AIy"/>
                     </connections>
                 </viewController>
@@ -384,7 +403,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Yp-vW-hEy"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Kfa-aE-ayj"/>
+                    <navigationItem key="navigationItem" id="Kfa-aE-ayj">
+                        <barButtonItem key="rightBarButtonItem" image="pencil" catalog="system" id="fAA-iX-lUd">
+                            <connections>
+                                <action selector="flowEditButtonPressed:" destination="Nnv-5H-Rk2" id="iTx-45-Tck"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="actionButton" destination="5JD-kl-BES" id="4nF-CP-xo2"/>
                         <outlet property="eventButton" destination="vg7-HT-RJB" id="MCS-zT-qkr"/>
@@ -392,6 +417,7 @@
                         <outlet property="reminderButton" destination="J6V-6a-cU0" id="Rgs-jj-erN"/>
                         <outlet property="scrollView" destination="ow5-vJ-OOV" id="Oe9-oz-VLk"/>
                         <segue destination="foV-aM-DzH" kind="show" identifier="flowToEventEditor" id="YNI-Od-6Py"/>
+                        <segue destination="U4f-iB-2x1" kind="show" identifier="flowToFlowEditor" id="yhP-2a-Ir5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0AP-J0-Cnp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -734,11 +760,13 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="yhP-2a-Ir5"/>
         <segue reference="u8X-Fj-2bP"/>
         <segue reference="OcG-Nk-Drr"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera" catalog="system" width="128" height="96"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
