--- a/Program_Scheduler/EventView.xib
+++ b/Program_Scheduler/EventView.xib
@@ -32,7 +32,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.081958590080000004" green="0.29393073260000002" blue="0.28055091469999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="Khl-Tg-VCW" firstAttribute="top" secondItem="nj5-tD-94z" secondAttribute="bottom" priority="750" constant="8" id="MVw-PI-i1e"/>
                 <constraint firstItem="Khl-Tg-VCW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="QWf-xi-ct1"/>
